--- a/config/database.yml
+++ b/config/database.yml
@@ -4,20 +4,41 @@
 # Configure Using Gemfile
 # gem 'activerecord-jdbcsqlite3-adapter'
 #
-default: &default
-  adapter: sqlite3
+#default: &default
+#  adapter: sqlite3
 
-development:
-  <<: *default
-  database: db/development.sqlite3
+#development:
+#  <<: *default
+#  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+#test:
+#  <<: *default
+#  database: db/test.sqlite3
+
+#production:
+#  <<: *default
+#  database: db/production.sqlite3
+
+default: &default
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: 5
+
+development:
+  <<: *default
+  database: crk2_dev
+  username: postgres
+  password: password
+
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: crk2_test
+  username: postgres
+  password: password
 
-production:
-  <<: *default
-  database: db/production.sqlite3
+# production:  # heroku overwrites
