--- a/config/database.yml
+++ b/config/database.yml
@@ -1,54 +1,63 @@
-# SQLite version 3.x
-#   gem 'activerecord-jdbcsqlite3-adapter'
-#
-# Configure Using Gemfile
-# gem 'activerecord-jdbcsqlite3-adapter'
-#
-#default: &default
-#  adapter: sqlite3
-
-#development:
-#  <<: *default
-#  database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-#test:
-#  <<: *default
-#  database: db/test.sqlite3
-
-#production:
-#  <<: *default
-#  database: db/production.sqlite3
-
 default: &default
-  adapter: sqlite3
-  #adapter: jdbc
-  # driver: com.microsoft.sqlserver.jdbc.SQLServerDriver
-  #adapter: postgresql
-  #encoding: unicode
+  encoding: unicode
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
-  #pool: 5
+  pool: 5
 
 development:
   <<: *default
-  database: db\crk2_dev.sqlite3
+
+  # sqlite
+  #adapter: sqlite3
+  #database: db\crk2_dev.sqlite3
+
+  # postgres
+  #adapter: postgresql
+  #database: crk2_dev
   #username: postgres
   #password: password
-  #url: jdbc:sqlserver://localhost:1433;databaseName=crk2_dev
-  #username: crk_app_login
-  #password: password
+
+  # sqlserver use url or database
+  adapter: sqlserver
+  database: crk2_dev
+  username: crk_app_login
+  password: password
 
 test:
   <<: *default
-  database: db\crk2_test.sqlite3
+
+  # sqlite
+  #adapter: sqlite3
+  #database: db\crk2_test.sqlite3
+
+  # postgres
+  #adapter: postgresql
+  #database: crk2_test
   #username: postgres
   #password: password
 
-production:  # heroku overwrites
+  # sqlserver
+  adapter: sqlserver
+  database: crk2_test
+  username: crk_app_login
+  password: password
+
+production:
   <<: *default
-  database: db\crk2_prod.sqlite3
+
+  # sqlite
+  #adapter: sqlite3
+  #database: db\crk2_prod.sqlite3
+
+  # postgres
+  # heroku overwrites
+  #adapter: postgresql
+  #database: crk2_prod
   #username: postgres
   #password: password
+
+  # sqlserver
+  adapter: sqlserver
+  database: crk2_prod
+  username: crk_app_login
+  password: password
