--- a/config/database.yml
+++ b/config/database.yml
@@ -18,10 +18,10 @@ development:
   #password: password
 
   # sqlserver use url or database
-  adapter: sqlserver
-  database: crk2_dev
-  username: crk_app_login
-  password: password
+  #adapter: sqlserver
+  #database: crk2_dev
+  #username: crk_app_login
+  #password: password
 
 test:
   <<: *default
@@ -37,10 +37,10 @@ test:
   #password: password
 
   # sqlserver
-  adapter: sqlserver
-  database: crk2_test
-  username: crk_app_login
-  password: password
+  #adapter: sqlserver
+  #database: crk2_test
+  #username: crk_app_login
+  #password: password
 
 production:
   <<: *default
@@ -51,13 +51,13 @@ production:
 
   # postgres
   # heroku overwrites
-  #adapter: postgresql
-  #database: crk2_prod
-  #username: postgres
-  #password: password
+  adapter: postgresql
+  database: crk2_prod
+  username: postgres
+  password: password
 
   # sqlserver
-  adapter: sqlserver
-  database: crk2_prod
-  username: crk_app_login
-  password: password
+  #adapter: sqlserver
+  #database: crk2_prod
+  #username: crk_app_login
+  #password: password
