--- a/config/database.yml
+++ b/config/database.yml
@@ -8,14 +8,14 @@ development:
   <<: *default
 
   # sqlite
-  adapter: sqlite3
-  database: db/crk2_dev.sqlite3
+  #adapter: sqlite3
+  #database: db/crk2_dev.sqlite3
 
   # postgres
-  #adapter: postgresql
-  #database: crk2_dev
-  #username: postgres
-  #password: password
+  adapter: postgresql
+  database: crk2_dev
+  username: postgres
+  password: password
 
   # sqlserver use url or database
   #adapter: sqlserver
