--- a/config/database.yml
+++ b/config/database.yml
@@ -46,15 +46,15 @@ production:
   <<: *default
 
   # sqlite
-  #adapter: sqlite3
-  #database: db/crk2_prod.sqlite3
+  adapter: sqlite3
+  database: db/crk2_prod.sqlite3
 
   # postgres
   # heroku overwrites
-  adapter: postgresql
-  database: crk2_prod
-  username: postgres
-  password: password
+  #adapter: postgresql
+  #database: crk2_prod
+  #username: postgres
+  #password: password
 
   # sqlserver
   #adapter: sqlserver
