prepare for heroku

--- a/config/database.yml
+++ b/config/database.yml
@@ -46,13 +46,13 @@ production:
   <<: *default
 
   # sqlite
-  adapter: sqlite3
-  database: db/crk2_prod.sqlite3
+  #adapter: sqlite3
+  #database: db/crk2_prod.sqlite3
 
   # postgres
   # heroku overwrites
-  #adapter: postgresql
-  #database: crk2_prod
+  adapter: postgresql
+  database: crk2_prod
   #username: postgres
   #password: password
 
